# eval-agents

./: .pre-commit-config.yaml  pyproject.toml
aieng-eval-agents/: pyproject.toml
implementations/aml_investigation/: 01_data_and_tools.ipynb  02_running_the_agent.ipynb  03_evaluation.ipynb
implementations/cibc-three/: Code Interpreter.ipynb  Data.ipynb  Fraud_Agent.ipynb  Fraud_Agent_Simple_E2B.ipynb  Fraud_Agent_Simple_E2B_Evaluation.ipynb  README.md  dataset_input_ids.csv
implementations/knowledge_qa/: 01_dataset_and_tools.ipynb  02_running_the_agent.ipynb  03_evaluation.ipynb
